3.4.1
-----
1. Update translations.

3.4.0
-----
 1. Allow sorting playlist, and queue, on single field.
 2. Add option to change highlight colour based upon current cover.
 3. Add option to configure padding between list items.
 4. Add explicit icons for shuffle off and repeat off.
 5. Don't recolour active icons, different images are used to indicate state.
 6. Switch "..." and "(...)" icons yet again, use "..." for menus as its
    similar to other menu icon.
 7. Try to interpret back button as go back when running as a WebApp.
 8. Default to 'Darker' for iOS and Android.
 9. Don't change icon size when change font size.
10. Delay showing disconnected icon for 5 seconds.
11. Adjust Adwaita theme colours.
12. Allow specifying themeColor and defaultTheme as URL query parameters.
13. Fix pin/unpin start of 'My Music' menu item entries.
14. Hide hover buttons in kiosk mode, if applicable.
15. Use custom WebKit scrollbars for all themes.
16. Remove 'Play next' when in party mode.
17. Add 'Average' volume control to group volume dialog.
18. Only disable menu, dialog, etc. shadows on Dark, Darker, and Black themes.
19. Try to display group volume dialog under button.
20. In desktop layout with MAI installed '(i)' button shows track info.
21. Remove options to collapse multi-disc albums.
22. When showing multi-disc albums add a 'Scroll to disc' menu entry in
    actions menu.
23. Hide 'Sort by' menu option if there is only 1 album.
24. Fix flicker when show 'Help' page.
25. Remove WebApp standalone/fullscreen option, and default to standalone.

3.3.5
-----
1. Fix inactive bottom navigation icons when using coloured toolbars with a
   light theme.
2. Add extra icon mapping for Pandora.

3.3.4
-----
1. Fix enable/disable alarms.
2. Fix hiding of items for party mode when using grid view.

3.3.3
-----
1. Fix toggling of alarms by clicking on checkbox.
2. Fix toggling of continuous mode in random mix dialog.