@@ -149,9 +149,9 @@ def fixUtils():
          f.write(text)
 
 
-def fixClassisSkinMods(version):
-    info("...updating Classic Skin mods")
-    for entry in ["skin.css", "standardheader.html", "html/js/iframe-dialog.js"]:
+def fixOtherFiles(version):
+    info("...updating other files")
+    for entry in ["skin.css", "standardheader.html", "materialhelpheader.html", "html/js/iframe-dialog.js"]:
         fixedLines = []
         path = "%s/../%s" % (HTML_FOLDER, entry)
         with open(path, "r") as f:
@@ -166,31 +166,6 @@ def fixClassisSkinMods(version):
         with open(path, "w") as f:
             for line in fixedLines:
                 f.write(line)
-
-
-def fixHelpFiles(version):
-    info("...updating Help files")
-
-    base = "%s/../../" % HTML_FOLDER
-    for entry in os.listdir(base):
-        if entry != "material":
-            langTop = "%s/%s/html/material-skin/" % (base, entry)
-            if os.path.exists(langTop) and os.path.isdir(langTop):
-                for fname in os.listdir(langTop):
-                    if fname.endswith(".html"):
-                        fixedLines = []
-                        path = "%s/%s" % (langTop, fname)
-                        with open(path, "r") as f:
-                            lines=f.readlines()
-                            for line in lines:
-                                line=line.replace("?r=MATERIAL_VERSION", "?r=%s" % version)
-                                if "html/css/" in line:
-                                    line=line.replace(".css?", ".min.css?")
-                                fixedLines.append(line)
-
-                        with open(path, "w") as f:
-                            for line in fixedLines:
-                                f.write(line)
 
 
 def trim(path):
@@ -399,8 +374,7 @@ def fixHtml(version):
 def minify(version):
     info("Minifying")
     fixUtils()
-    fixClassisSkinMods(version)
-    fixHelpFiles(version)
+    fixOtherFiles(version)
     minifyJs()
     minifyCss()
     removeUnminified()
